# ChangeLog for kde-base/kdemultimedia-arts
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-arts/ChangeLog,v 1.82 2008/09/13 23:58:07 carlo Exp $

*kdemultimedia-arts-3.5.10 (13 Sep 2008)

  13 Sep 2008; Carsten Lohrke <carlo@gentoo.org>
  +kdemultimedia-arts-3.5.10.ebuild:
  Version bump.

  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
  -kdemultimedia-arts-3.5.8.ebuild:
  Removed old versions.

  18 May 2008; Markus Meier <maekke@gentoo.org>
  kdemultimedia-arts-3.5.9.ebuild:
  amd64/x86 stable, bug #221063

  14 May 2008; Markus Rothe <corsair@gentoo.org>
  kdemultimedia-arts-3.5.9.ebuild:
  Stable on ppc64; bug #221063

  12 May 2008; Brent Baude <ranger@gentoo.org>
  kdemultimedia-arts-3.5.9.ebuild:
  Marking kdemultimedia-arts-3.5.9 ppc stable for bug 221063

  12 May 2008; Jeroen Roovers <jer@gentoo.org>
  kdemultimedia-arts-3.5.9.ebuild:
  Stable for HPPA (bug #221063).

  12 May 2008; Raúl Porcel <armin76@gentoo.org>
  kdemultimedia-arts-3.5.9.ebuild:
  alpha/ia64/sparc stable wrt #221063

  04 Mar 2008; Jeroen Roovers <jer@gentoo.org>
  kdemultimedia-arts-3.5.8.ebuild, kdemultimedia-arts-3.5.9.ebuild:
  Keyword split KDE for HPPA.

*kdemultimedia-arts-3.5.9 (20 Feb 2008)

  20 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kdemultimedia-arts-3.5.9.ebuild:
  Version bump to KDE 3.5.9.

  16 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -kdemultimedia-arts-3.5.5.ebuild, -kdemultimedia-arts-3.5.6.ebuild,
  -kdemultimedia-arts-3.5.7.ebuild:
  Spring cleaning

  31 Jan 2008; Brent Baude <ranger@gentoo.org>
  kdemultimedia-arts-3.5.8.ebuild:
  Marking kdemultimedia-arts-3.5.8 ppc for bug 207634

  30 Jan 2008; Brent Baude <ranger@gentoo.org>
  kdemultimedia-arts-3.5.8.ebuild:
  Marking kdemultimedia-arts-3.5.8 ppc64 for bug 207634

  30 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  kdemultimedia-arts-3.5.8.ebuild:
  stable x86, bug 207634
