@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-arts/kdemultimedia-arts-3.5.10.ebuild,v 1.1 2008/09/13 23:58:07 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-arts/kdemultimedia-arts-3.5.10.ebuild,v 1.2 2009/05/31 21:17:39 nixnut Exp $
 
 KMNAME=kdemultimedia
 KMMODULE=arts
@@ -8,7 +8,7 @@ EAPI="1"
 inherit kde-meta eutils
 
 DESCRIPTION="aRts pipeline builder and other tools"
-KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE="alsa"
 KMEXTRACTONLY="mpeglib_artsplug/configure.in.in" # needed because the artsc-config call is here
 KMEXTRA="doc/artsbuilder"
