@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdemultimedia-arts
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-arts/ChangeLog,v 1.82 2008/09/13 23:58:07 carlo Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-arts/ChangeLog,v 1.83 2009/05/31 21:17:39 nixnut Exp $
+
+  31 May 2009; nixnut <nixnut@gentoo.org> kdemultimedia-arts-3.5.10.ebuild:
+  ppc stable #271889
 
 *kdemultimedia-arts-3.5.10 (13 Sep 2008)
 
